clean up deps, use some new tmux goodness

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,8 +18,12 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set -g bell-action none
 set -g visual-bell off
 
+unbind C-b
+set-option -g prefix C-a
+set -g status-style 'bg=#333333 fg=#5eacd3'
+
 # act like vim
- setw -g mode-keys vi
+setw -g mode-keys vi
 
 # Pane resizing
 bind ( resize-pane -L 5
@@ -77,3 +81,5 @@ bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
 
 # Run urlview on a pane
 bind-key u capture-pane -J -S- -E- \; save-buffer /tmp/tmux-buffer \; split-window -l 10 'bash -c "tac /tmp/tmux-buffer | urlview"'
+
+bind-key -r S run-shell "~/.bin/tmux-sessionizer ~/src/loop-sdk"
