fix paste, add some sessions

--- a/tmux.conf
+++ b/tmux.conf
@@ -82,4 +82,8 @@ bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
 # Run urlview on a pane
 bind-key u capture-pane -J -S- -E- \; save-buffer /tmp/tmux-buffer \; split-window -l 10 'bash -c "tac /tmp/tmux-buffer | urlview"'
 
+bind-key -r f run-shell "tmux neww ~/.bin/tmux-sessionizer"
+
 bind-key -r S run-shell "~/.bin/tmux-sessionizer ~/src/loop-sdk"
+bind-key -r D run-shell "~/.bin/tmux-sessionizer ~/src/dotfiles"
+
