fix panes, statusline

--- a/tmux.conf
+++ b/tmux.conf
@@ -67,11 +67,11 @@ bind R source-file ~/.tmux.conf \; display "Reloaded!"
 
 set -ga terminal-overrides ',xterm-256color:Tc'
 
-# Swap windows with Shift-Control arrows
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
+# Swap windows with Shift-Control vim-arrows
+bind-key -n C-S-h swap-window -t -1
+bind-key -n C-S-l swap-window -t +1
 
-# smart pane switching
+# smart pane switching. Switch tmux pane unless vim, then switch vim panes.
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
@@ -87,3 +87,9 @@ bind-key -r f run-shell "tmux neww ~/.bin/tmux-sessionizer"
 bind-key -r S run-shell "~/.bin/tmux-sessionizer ~/src/loop-sdk"
 bind-key -r D run-shell "~/.bin/tmux-sessionizer ~/src/dotfiles"
 
+# vim-like pane switching
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
