try using c-x as tmux prefix

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,7 +19,7 @@ set -g bell-action none
 set -g visual-bell off
 
 unbind C-b
-set-option -g prefix C-a
+set-option -g prefix C-x
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
 # act like vim
