use nicer icons + patched font

--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -43,3 +43,5 @@ colors:
     white:   '#d6deeb'
 font:
   size: 14
+  normal:
+    family: 'DejaVuSansM Nerd Font' # https://www.nerdfonts.com/font-downloads
