--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -42,6 +42,6 @@ colors:
     cyan:    '#7fdbca'
     white:   '#d6deeb'
 font:
-  size: 12
+  size: 16
   normal:
-    family: 'DejaVuSansM Nerd Font' # https://www.nerdfonts.com/font-downloads
+    family: 'Hack Nerd Font' # https://www.nerdfonts.com/font-downloads
