lots of cleanup

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,6 +22,9 @@ unbind C-b
 set-option -g prefix C-x
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
+# Support ^arrows
+set-window-option -g xterm-keys on
+
 # act like vim
 setw -g mode-keys vi
 
@@ -88,8 +91,11 @@ bind-key -r S run-shell "~/.bin/tmux-sessionizer ~/src/loop-sdk"
 bind-key -r D run-shell "~/.bin/tmux-sessionizer ~/src/dotfiles"
 
 # vim-like pane switching
-bind -r ^ last-window
+bind -r z last-window
 bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
+# nvim told me to do this
+set-option -sa terminal-features ',XXX:RGB'
