clean up unused plugins, fix colors, update lsp-zero

--- a/tmux.conf
+++ b/tmux.conf
@@ -68,8 +68,6 @@ setw -g aggressive-resize on
 # Easier reload
 bind R source-file ~/.tmux.conf \; display "Reloaded!"
 
-set -ga terminal-overrides ',xterm-256color:Tc'
-
 # Swap windows with Shift-Control vim-arrows
 bind-key -n C-S-h swap-window -t -1
 bind-key -n C-S-l swap-window -t +1
@@ -97,5 +95,7 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
-# nvim told me to do this
-set-option -sa terminal-features ',XXX:RGB'
+# nvim told me to do this, enable true color
+set-option -g default-terminal 'tmux-256color'
+set -ga terminal-overrides ',xterm-256color:Tc'
+set-option -sa terminal-features ',alacritty:Tc'
