--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,7 @@
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
 # Set the default shell to ZSH
 set-option -g default-shell $SHELL
 
@@ -89,7 +93,7 @@ bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi "C-\" select-pane -l
+bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # Run urlview on a pane
 bind-key u capture-pane -J -S- -E- \; save-buffer /tmp/tmux-buffer \; split-window -l 10 'bash -c "tac /tmp/tmux-buffer | urlview"'
@@ -110,3 +114,5 @@ bind -r l select-pane -R
 set-option -g default-terminal 'tmux-256color'
 set -ga terminal-overrides ',xterm-256color:Tc'
 set-option -sa terminal-features ',alacritty:Tc'
+
+run '~/.tmux/plugins/tpm/tpm'
