--- a/tmux.conf
+++ b/tmux.conf
@@ -1,16 +1,11 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-
-# Set the default shell to ZSH
-set-option -g default-shell $SHELL
-
-# Set the default colors
-set -g default-terminal 'screen-256color'
-
-# fix fix
-# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-# set-option -g default-command "tdc"
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'erikw/tmux-powerline'
 
 # Enable mouse scolling
 set -g mouse on
@@ -69,14 +64,12 @@ set -g history-limit 99999
 # is actively looking at it.
 setw -g aggressive-resize on
 
-# Easier reload
-bind R source-file ~/.tmux.conf \; display "Reloaded!"
-
 # Swap windows with Shift-Control vim-arrows
 bind-key -n C-S-h swap-window -t -1
 bind-key -n C-S-l swap-window -t +1
 
-# smart pane switching. Switch tmux pane unless vim, then switch vim panes.
+# tmux-navigator integration
+
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
 bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
@@ -94,9 +87,6 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
-
-# Run urlview on a pane
-bind-key u capture-pane -J -S- -E- \; save-buffer /tmp/tmux-buffer \; split-window -l 10 'bash -c "tac /tmp/tmux-buffer | urlview"'
 
 bind-key -r f run-shell "tmux neww ~/.bin/tmux-sessionizer"
 
