finally fix lsp issue, add oil

--- a/tmux.conf
+++ b/tmux.conf
@@ -68,6 +68,9 @@ setw -g aggressive-resize on
 bind-key -n C-S-h swap-window -t -1
 bind-key -n C-S-l swap-window -t +1
 
+# wezterm zenmode integration
+set-option -g allow-passthrough on
+
 # tmux-navigator integration
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
