--- a/config/starship.toml
+++ b/config/starship.toml
@@ -158,6 +158,7 @@ format = '\[[$symbol($version)]($style)\]'
 
 [rust]
 format = '\[[$symbol($version)]($style)\]'
+style = 'bold #e51716'
 
 [scala]
 format = '\[[$symbol($version)]($style)\]'
