--- a/tmux.conf
+++ b/tmux.conf
@@ -3,9 +3,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'erikw/tmux-powerline'
 
 # Enable mouse scolling
 set -g mouse on
@@ -18,7 +16,7 @@ set -g bell-action none
 set -g visual-bell off
 
 unbind C-b
-set-option -g prefix C-x
+set-option -g prefix C-g
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
 # Support ^arrows
