tweak tmux plugins, cleanup files

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,8 +2,12 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
-set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'b0o/tmux-autoreload'
+set -g @plugin 'AngryMorrocoy/tmux-neolazygit'
+set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin 'laktak/extrakto'
+set -g @plugin 'tmux-plugins/tmux-open'
 
 # Enable mouse scolling
 set -g mouse on
@@ -107,3 +111,4 @@ set -ga terminal-overrides ',xterm-256color:Tc'
 set-option -sa terminal-features ',alacritty:Tc'
 
 run '~/.tmux/plugins/tpm/tpm'
+
