format, avoid ' causing autoclose, tweak copilot config, add golf and obisdian

--- a/.luarc.json
+++ b/.luarc.json
@@ -54,5 +54,8 @@
         "${3rd}/luassert/library",
         "${3rd}/lfs/library"
     ],
-    "workspace.checkThirdParty": false
+    "workspace.checkThirdParty": false,
+    "diagnostics.disable": [
+        "undefined-doc-name"
+    ]
 }
