go back to ^b for tmux, works nicely on thumb cluster keyboards

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,7 +20,7 @@ set -g bell-action none
 set -g visual-bell off
 
 unbind C-b
-set-option -g prefix C-g
+set-option -g prefix C-b
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
 # Support ^arrows
@@ -45,9 +45,6 @@ set -g base-index 1
 set -g pane-base-index 1
 setw -g base-index 1
 setw -g pane-base-index 1
-
-# Make sure tmux reports focus changes for vitality.vim
-set -g focus-events on
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
